omni-lang/compiler/errors.txt
    Checking omnc v1.0.0 (D:\Project\Helios\omni-lang\compiler)
error[E0433]: failed to resolve: could not find `RuntimeProfiler` in `profiler`
   --> src\main.rs:312:28
    |
312 |         runtime::profiler::RuntimeProfiler::start_profiling();
    |                            ^^^^^^^^^^^^^^^ could not find `RuntimeProfiler` in `profiler`
    |
help: a struct with a similar name exists
    |
312 -         runtime::profiler::RuntimeProfiler::start_profiling();
312 +         runtime::profiler::OmniProfiler::start_profiling();
    |

error[E0433]: failed to resolve: could not find `RuntimeProfiler` in `profiler`
   --> src\main.rs:323:46
    |
323 |             let metrics = runtime::profiler::RuntimeProfiler::stop_profiling();
    |                                              ^^^^^^^^^^^^^^^ could not find `RuntimeProfiler` in `profiler`
    |
help: a struct with a similar name exists
    |
323 -             let metrics = runtime::profiler::RuntimeProfiler::stop_profiling();
323 +             let metrics = runtime::profiler::OmniProfiler::stop_profiling();
    |

error[E0425]: cannot find function `disable` in module `monitor`
   --> src\main.rs:338:18
    |
338 |         monitor::disable();
    |                  ^^^^^^^ not found in `monitor`

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\main.rs:187:14
    |
187 | fn main() -> Result<()> {
    |              ^^^^^^ -- supplied 1 generic argument
    |              |
    |              expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\ssjag\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:10
    |
557 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
187 | fn main() -> Result<(), E> {
    |                       +++

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\main.rs:344:42
    |
344 | fn compile(source: &str, args: &Args) -> Result<()> {
    |                                          ^^^^^^ -- supplied 1 generic argument
    |                                          |
    |                                          expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\ssjag\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:10
    |
557 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
344 | fn compile(source: &str, args: &Args) -> Result<(), E> {
    |                                                   +++

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\main.rs:597:6
    |
597 | ) -> Result<parser::ast::Module> {
    |      ^^^^^^ ------------------- supplied 1 generic argument
    |      |
    |      expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\ssjag\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:10
    |
557 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
597 | ) -> Result<parser::ast::Module, E> {
    |                                +++

error[E0107]: enum takes 2 generic arguments but 1 generic argument was supplied
   --> src\main.rs:609:6
    |
609 | ) -> Result<parser::ast::Module> {
    |      ^^^^^^ ------------------- supplied 1 generic argument
    |      |
    |      expected 2 generic arguments
    |
note: enum defined here, with 2 generic parameters: `T`, `E`
   --> C:\Users\ssjag\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:557:10
    |
557 | pub enum Result<T, E> {
    |          ^^^^^^ -  -
help: add missing generic argument
    |
609 | ) -> Result<parser::ast::Module, E> {
    |                                +++

warning: unused variable: `name`
    --> src\runtime\interpreter.rs:2834:39
     |
2834 |             RuntimeValue::StructDef { name, .. } => "struct_def",
     |                                       ^^^^ help: try ignoring the field: `name: _`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `name`
    --> src\runtime\interpreter.rs:2836:36
     |
2836 |             RuntimeValue::Module { name, .. } => "module",
     |                                    ^^^^ help: try ignoring the field: `name: _`

warning: unused variable: `a`
   --> src\runtime\native.rs:165:51
    |
165 |                 if let (Some(RuntimeValue::Vector(a)), Some(RuntimeValue::Vector(b))) =
    |                                                   ^ help: if this is intentional, prefix it with an underscore: `_a`

warning: unused variable: `b`
   --> src\runtime\native.rs:165:82
    |
165 |                 if let (Some(RuntimeValue::Vector(a)), Some(RuntimeValue::Vector(b))) =
    |                                                                                  ^ help: if this is intentional, prefix it with an underscore: `_b`

warning: unused variable: `name`
 --> src\runtime\profiler.rs:2:22
  |
2 | pub fn start_profile(name: &str) {}
  |                      ^^^^ help: if this is intentional, prefix it with an underscore: `_name`

warning: unused variable: `name`
 --> src\runtime\profiler.rs:3:20
  |
3 | pub fn end_profile(name: &str) {}
  |                    ^^^^ help: if this is intentional, prefix it with an underscore: `_name`

Some errors have detailed explanations: E0107, E0425, E0433.
For more information about an error, try `rustc --explain E0107`.
warning: `omnc` (bin "omnc") generated 6 warnings
error: could not compile `omnc` (bin "omnc") due to 7 previous errors; 6 warnings emitted
